# shiguang-tui

./: .gitignore  LICENSE  README.md  pyproject.toml
src/shiguang/: __init__.py  __main__.py  app.py  browse_view.py  config.py  diary.py  edit_view.py  format.py  frontmatter.py  home_view.py  init_cmd.py  llm.py  logo.py  markup.py  modals.py  sanity.py  stats.py  theme.py
src/shiguang/algorithms/: anniversary.py  daily_practice.py  mirror.py  rescue.py
