[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "afterglow-tui"
version = "0.2.14"
description = "拾光 · AfterGlow — terminal-first reflective journal for self-exploration and writing therapy"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Rain-Shuoyu" },
]
keywords = [
    "journal",
    "diary",
    "tui",
    "terminal",
    "textual",
    "reflection",
    "writing",
    "journaling",
    "pickup",
    "afterglow",
    "拾光",
    "日记",
    "写作",
    "自我探索",
    "疗愈",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "textual>=0.40",
    "httpx>=0.25",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
glow = "shiguang.__main__:main"

[project.urls]
Homepage = "https://github.com/Rain-Shuoyu/AfterGlow-AI-Powered-Reflective-Journal-Manager"
Repository = "https://github.com/Rain-Shuoyu/shiguang-tui"
Issues = "https://github.com/Rain-Shuoyu/shiguang-tui/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["shiguang*"]
